--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap&subset=cyrillic" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Arimo|Lobster&display=swap&subset=cyrillic" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css?family=Bad+Script|Lobster&display=swap&subset=cyrillic" rel="stylesheet">
         <link rel="stylesheet" href="css/base.css">
     </head>
     <body>
         <div class="wrapper">
-            <div class="card"><h1>Весела Коледа</h1></div>
+            <article class="card">
+                <h1>Весела Коледа</h1>
+                <p>С пожелание за много здраве, щастие и късмет,<br>весели моменти и приключения!</p>
+            </article>
             
         </div>
         <script src="js/snow.js" async defer></script>
